# rokid-openvoice-sdk-deps-uWS

./: Android.bp  Android.mk  CMakeLists.txt  Makefile  README.md  config  ndk.mk  vsys.mk
src/: Epoll.h  Group.cpp  Group.h  HTTPSocket.h  Hub.cpp  Networking.h  Node.h  WebSocket.cpp
